# Agentic_AI

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_groq.py
LangGraph/: client.py  m1_Chatbot.ipynb  mathserver.py  weather.py
Langchain/: m1_langchainIntro.ipynb  m2_tools_messages.ipynb  m3_structures.ipynb  m4_middlewares.ipynb
RAG_Course/1_Document_Loaders/: pyproject.toml  requirements.txt
RAG_Course/1_Document_Loaders/knowledge-source/: transformers.txt
RAG_Course/2_Text_Splitters/: 1_Length_based_splitting.ipynb  2_Recursive_character_based_splitting.ipynb  3_Doc_stuct_based_splitting.ipynb  4_Semantic_chunking.ipynb  5_LLM_based_chunking.ipynb  text_splitters.ipynb
RAG_Course/3_Embeddings/: proprietary_models.ipynb  pyproject.toml  requirements.txt
